feature/initial-structure-for-ui-tests Add initial structure for ui tests.
-

Signed-off-by: liuvasconcelos <ltenoriovasconcelos@gmail.com>

--- a/podfile
+++ b/podfile
@@ -4,6 +4,8 @@
 target 'star-wars' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   pod 'AlamofireObjectMapper', '~> 5.0'
+  pod 'SWHttpTrafficRecorder'
+  pod 'OHHTTPStubs/Swift'
   use_frameworks!
 
   # Pods for star-wars
